# Xwave

./: README.md  package.json
xwave-backend/: Cargo.toml
xwave-backend/src/: main.rs  mod.rs  rpc_server.rs
xwave-backend/src/blockchain/: README.md  block.rs  blockchain.rs  mod.rs  transaction.rs
xwave-backend/src/handlers/: wallet_controller.rs  wallet_handlers.rs  wallet_repository.rs
xwave-backend/src/services/: authService.rs  blockchainService.rs  mod.rs  wallet_service.rs
xwave-backend/src/tests/: token.test.rs
xwave-backend/src/utils/: crypto.rs  transactionManager.rs  validation.rs
xwave-frontend/: index.html  package-lock.json  package.json  rollup.config.cjs  tsconfig.app.json  vite.config.ts
xwave-frontend/src/: App.tsx
xwave-frontend/src/auth/: AuthContext.tsx  ProtectedRoute.tsx  WalletContext.tsx
xwave-frontend/src/blockchain/: Blockchain.tsx  Transaction.tsx
xwave-frontend/src/components/: ContentSection.tsx  Features.tsx  Footer.tsx  Hero.tsx  ShareButton.tsx  SystemHealthCheck.tsx
xwave-frontend/src/components/BottomNavBar/: BottomNavBar.tsx
xwave-frontend/src/components/Gaming/: ExploreGaming.tsx  GamingCard.tsx
xwave-frontend/src/components/Music/: ExploreMusic.tsx
xwave-frontend/src/content/: ContentManager.ts
xwave-frontend/src/contexts/: BlockchainContext.tsx  WebSocketContext.tsx
xwave-frontend/src/hooks/: useWallet.tsx
xwave-frontend/src/pages/: Login.tsx
xwave-frontend/src/services/: api.ts
xwave-frontend/src/styles/: global.d.ts
xwave-frontend/storage/: ipfs.ts
xwave-frontend/utils/: crypto.ts
(+20 files in other folders)
