[package]
name = "xwavve-backend"
version = "0.1.0"
authors = ["Yare"]
edition = "2024"

[dependencies]
actix-web = "3.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crypto = "0.5"
chrono =  "0.4"
thiserror = "1.0"
ring = "0.16"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
aes = "0.7"
block-modes = "0.8"
hex = "0.4"
rand = "0.8"
futures = "0.3"
regex = "1.5"
mime = "0.3"