[package]
name = "xwavve-backend"
version = "0.1.0"
authors = ["Yare"]
edition = "2024"

[dependencies]
actix = "0.13.5"  
actix-cors = "0.7.0"
actix-web = "4.9.0"  
actix-web-actors = "4.3.1"  
actix-rt = "2.5"  
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0.130"  
crypto = "0.5.0"  
chrono = "0.4.19"  
thiserror = "2.0.9" 
ring = "0.17.8"  
reqwest = "0.12.12" 
tokio = { version = "1.0", features = ["full"] } 
tokio-tungstenite = "0.26.1"
aes = "0.8.4"  
block-modes = "0.9.1"  
hex = "0.4.3"  
rand = "0.9.0"  
futures = "0.3.21"  
futures-util = "0.3.21"  
regex = "1.5.4"  
mime = "0.3.17"
warp = "0.3"
serde-json-core = "0.6.0"
jsonrpc-http-server = "18.0.0"
sha2 = "0.10"
async-std = "1.10"
jsonrpc-core = "18.0"
lazy_static = "1.4"


[[bin]]
name = "xwavve-backend"
path = "src/main.rs"  # Esto asegura que el binario esté en src/main.rs
